# object_tracking

./: .gitignore  CMakeLists.txt  README.md
configs/: rfdetr_medium.yaml  rfdetr_medium_sahi.yaml  rfdetr_medium_sahi_botsort.yaml  rfdetr_medium_sahi_ocsort.yaml  rfdetr_medium_sahi_small.yaml  rfdetr_small.yaml  unidrone.yaml  waldo.yaml  waldo_sahi.yaml  yolo_coco.yaml
include/ot/: bounded_queue.hpp  class_map.hpp  config.hpp  detector.hpp  detector_factory.hpp  frame_decoder.hpp  inference_backend.hpp  lock_manager.hpp  mot_tracker.hpp  one_euro.hpp  overlay.hpp  reid.hpp  selector.hpp  target_sink.hpp  target_state.hpp  types.hpp  video_source.hpp
scripts/: eval_tracks.py  export_reid_onnx.py  export_rfdetr_onnx.py  export_yolo_onnx.py
src/app/: main.cpp
src/core/: config.cpp
src/detect/: class_map.cpp  detector_factory.cpp  ort_backend.cpp  ort_backend.hpp  rfdetr_detector.cpp  rfdetr_detector.hpp  tiled_detector.cpp  tiled_detector.hpp  yolo_detector.cpp  yolo_detector.hpp
src/io/: nvdec_decoder.cpp  nvdec_decoder.hpp  ocv_decoder.cpp  ocv_decoder.hpp  video_source.cpp
src/lock/: lock_manager.cpp
src/output/: jsonl_sink.cpp
src/reid/: histogram_embedder.cpp  onnx_reid_embedder.cpp
src/track/: mot_tracker.cpp
src/ui/: overlay.cpp  selector.cpp
tools/: probe_decode.cpp  probe_detect.cpp  probe_lock.cpp  probe_reacquire.cpp  probe_track.cpp  reid_smoke.cpp  rfdetr_smoke.cpp  test_lock_appearance.cpp  test_lock_reticle.cpp
